Prevent starting Firefox and other apps while applying an update. Bug 525390 - 3.5.4 Upgrade failure: 'entry point js_SaveRegExpStatics could not be located'. r=vlad